Agregado Botón Cero
Según yo había terminado pero, no había botón cero, parecía calculadora española antes de llegar a México.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                             <li id="1" class="button" onclick="addOperation(1)">1</li>
                             <li id="2" class="button" onclick="addOperation(2)">2</li>
                             <li id="3" class="button" onclick="addOperation(3)">3</li>
+                            <li id="3" class="button" onclick="addOperation(0)">0</li>
+                            
+                        </ul>
+                        <ul class="buttons">
                             <li id="resultado" class="button" onclick="resultado()" style="background-color: rgb(0, 255, 170, 0.7); color: white;">=</li>
                         </ul>
                     </center>
